z-index of city fixed

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -57,7 +57,7 @@ a.call_to_action {
 
 #city {
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   top: -60px;
   width: 990px;
 }
